<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Burnout</string>

    <string name="main_title">번아웃 챌린지 &#x1F525;</string>
    <string name="main_title2">번아웃 챌린지 &#x1F60E;</string>
    <string name="main_title3">번아웃 챌린지 &#x1F61B;</string>

    <string name="text_download">다운로드</string>
    <string name="text_cancel">취소</string>
    <string name="text_save">저장</string>
    <string name="text_share">공유하기</string>

    <!-- Share -->
    <string name="share_kakaotalk">카카오톡</string>
    <string name="share_facebook">페이스북</string>
    <string name="share_instagram">인스타그램</string>
    <string name="share_to_instagram">인스타그램 공유하기</string>
    <string name="share_to_kakaotalk">카카오톡 공유하기</string>
    <string name="share_to_facebook">페이스북 공유하기</string>

    <string name="tag_title">#번아웃_챌린지 #%s</string>
    <string name="select_tag">&lt;b&gt;#번아웃_챌린지&lt;/b&gt; 태그 포함하기</string>

    <!-- Mission -->
    <string name="main_fab_chatting_description">START CHATTING</string>

    <!-- Chatting -->
    <string name="title_chatting">Chatting</string>
    <string name="item_chatting_take_picture">사진 찍기</string>

    <!-- DRAW -->
    <string name="title_draw">%s &#x1F3A8;</string>

    .
    <!-- Answer-->
    <string name="title_answer">Answer</string>
    <string name="text_new_message_mission">새로운 번아웃 미션 알림</string>

    <!-- Badge -->
    <string name="title_badge">BADGE</string>

    <!-- Completed Stage Resources-->
    <string name="complete_stage_message">- 미션%s을 쉽게 해결했다. -</string>
    <string name="title_ending">ENDING</string>

</resources>